k8s-config/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sky-journey-ingress
  namespace: core
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-journey-ui-service
            port:
              number: 80
      - path: /core/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-journey-core-service
            port:
              number: 8080
      - path: /auth/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-journey-auth-service
            port:
              number: 8082
